--- a/WhaSAP_vivino_analysis.Rmd
+++ b/WhaSAP_vivino_analysis.Rmd
@@ -74,11 +74,11 @@ Provjerimo vizualno postoje li razlike u ocjenama za različite vrste vina.
 
 ```{r test razlike u prihodima}
 
-# Graficki prikaz podataka
+# Grafički prikaz podataka
 boxplot(dataset_vina$Rating ~ dataset_vina$Style)
 
 ```
-Na boxplot-u možemo vidjeti da određene srednje vrijednosti (poput one za npr. Rose) znatno odskaču od ostalih, ali postoje i srednje vrijednosti koje djeluju blisko (npr. za Dessert, Fortified i Sparkling).
+Na boxplotu možemo vidjeti da određene srednje vrijednosti (poput one za npr. Rose) znatno odskaču od ostalih, ali postoje i srednje vrijednosti koje djeluju blisko (npr. za Dessert, Fortified i Sparkling).
 
 
 
@@ -140,7 +140,7 @@ plot_histogram_with_normal_dist(dataset_vina$Rating[dataset_vina$Style == 'Spark
 plot_histogram_with_normal_dist(dataset_vina$Rating[dataset_vina$Style == 'White'], 'White')
 ```
 
-Vidimo da su p-vrijednosti provedenog testa vrlo male (<5%). Razlog zbog kojeg p-vrijednosti mogu biti ovako male je i osjetljivost testa na outliere koje smo vidjeli u početnom boxplot-u. Također, jedan od razloga zbog kojeg testovi odbacuju nul-hipotezu mogao bi biti i zato što imamo diskretizirane (4.0, 4.1, ...) umjesto kontinuiranih podataka
+Vidimo da su p-vrijednosti provedenog testa vrlo male (<5%). Razlog zbog kojeg p-vrijednosti mogu biti ovako male je i osjetljivost testa na outliere koje smo vidjeli u početnom boxplotu. Također, jedan od razloga zbog kojeg testovi odbacuju nul-hipotezu mogao bi biti i zato što imamo diskretizirane (4.0, 4.1, ...) umjesto kontinuiranih podataka
 
 Provodimo KS test za provjeru normalnosti:
 
@@ -171,10 +171,10 @@ ks.test(dataset_vina$Rating[dataset_vina$Style == 'White'], "pnorm",
         sd = sd(dataset_vina$Rating[dataset_vina$Style == 'White'], na.rm = TRUE))
 ```
 
-Provedbom KS-testa dobivamo veće vjerojatnosti, te na raziniznačajnoti od 1% ne bismo mogli odbaciti hipoteze da Dessert, Fortified, Rose i Sparkling ne prate normalu razdiobu. Ali slično kao i u provedbi Lillieforsove inačice KS testa, na preciznost testa utječu outlieri i diskretizirane vrijednosti.
+Provedbom KS-testa dobivamo veće vjerojatnosti, te na razini značajnoti od 1% ne bismo mogli odbaciti hipoteze da Dessert, Fortified, Rose i Sparkling ne prate normalu razdiobu. Ali slično kao i u provedbi Lillieforsove inačice KS testa, na preciznost testa utječu outlieri i diskretizirane vrijednosti.
 
 
-Prikaz podataka podijeljenih u grupe na Q-Q plot-u:
+Prikaz podataka podijeljenih u grupe na Q-Q plotu:
 
 ```{r}
 qqnorm(dataset_vina$Rating[dataset_vina$Style == "Dessert"], main = "Q-Q Plot: Dessert Ratings")
@@ -205,7 +205,7 @@ Kad su veličine grupa podjednake, ANOVA je relativno robusna metoda na blaga od
 table(dataset_vina$Style)      # broj ocjena za svaku pojedinu vrstu vina
  
 library(dplyr)                 
-# sortitani prikaz broja ocjena za svaku pojedinu vrstu vina, sortirano silazno 
+# sortirani prikaz broja ocjena za svaku pojedinu vrstu vina, sortirano silazno 
 # po broju ocjena
 dataset_vina %>%  
   count(Style, sort = TRUE)
@@ -241,7 +241,7 @@ var((dataset_vina$Rating[dataset_vina$Style=='White']))
 
 ```
 
-Vidimo da je p-vrijednost Bartlettovog testa vrlo mala, pa na razini značajnosti 5% možemo odbaciti nultu hipotezu, odnosno zaključujemo da barem dvije varijance nisu iste, a ova tvrdnja je vidljiva i kod ispisa varijanci.
+Vidimo da je p-vrijednost Bartlettovog testa vrlo mala, pa na razini značajnosti 5 % možemo odbaciti nultu hipotezu, odnosno zaključujemo da barem dvije varijance nisu iste, a ova tvrdnja je vidljiva i kod ispisa varijanci.
 
 
 
@@ -294,7 +294,7 @@ Vrlo mala p-vrijednost (<0.001) kod provođenja ANOVA testa implicira da postoji
 Zaključak: Svi ANOVA testovi pokazali su da postoji statistički značajna razlika među različitim podgrupama vrsta vina, odnosno možemo odgovoriti na početno pitanje i zaključiti da postoji razlika u ocjenama među različitim vrstama vina.
 
 
-Grafički prikaz (boxplot) sa početka ovog dokumenta sugerira da postoji jasna razlika između grupa, što potvrđuje i ANOVA. Sada kada smo proučili zasebno svaku od podgrupa, kako bismo procijenili model koji pomoću varijable o vrsti vina objašnjava ocjene?
+Grafički prikaz (boxplot) s početka ovog dokumenta sugerira da postoji jasna razlika između grupa, što potvrđuje i ANOVA. Sada kada smo proučili zasebno svaku od podgrupa, kako bismo procijenili model koji pomoću varijable o vrsti vina objašnjava ocjene?
 
 ```{r linearni model}
 
@@ -312,7 +312,7 @@ anova_result <- aov(Rating ~ Style, data = dataset_vina)
 summary(anova_result)
 ```
 
-P-vrijednost (< 2.2e-16) pokazuje da varijabla vrste vina (Style) ima statisički značajan utjecaj na ocjene (Rating).
+P-vrijednost (< 2.2e-16) pokazuje da varijabla vrste vina (Style) ima statistički značajan utjecaj na ocjene (Rating).
 
 Kruskal-Wallisov test je neparametarska alternativa (jednofaktorskoj) analizi varijance - "neparametarska ANOVA". Budući da je on robusniji na odstupanja pretpostavki ANOVA-e, možemo provesti i njega kako bismo potvrdili svoj zaključak o razlici ocjene ovisno o vrsti vina.
 Njegove hipoteze su:
@@ -376,7 +376,7 @@ i prihvaćamo hipotezu da je to nepovezano kao točnu
 
 
 
-PITANJE: Jesu li vina iz Francuske popularnija (imaju više recenzija) od onih iz italije?
+PITANJE: Jesu li vina iz Francuske popularnija (imaju više recenzija) od onih iz Italije?
 
 Hipoteze:
   H0: yfr = yita
@@ -556,7 +556,7 @@ cat("Broj recenzija ita Vina:", length(talijanskaVina$Reviews), "\n")
 Zbog velikog broja recenzija, n~1850, možemo koristiti t-test unatoč tome da podatci ne dolaze iz normalne razdiobe,
 također koristit će se logaritam broja recenzija jer je on bliže normalnoj razdiobi od broja recenzija
 
-Također treba odrediti da li su varijance podataka jednake, to radimo F-testom o varijancama
+Također treba odrediti jesu li varijance podataka jednake, to radimo F-testom o varijancama
 
 ```{r}
 var(francuskaVina$LogReviews)
@@ -638,7 +638,7 @@ boxplot(Price~Country_Code,data=dataset_vina)
 ```
 
 
-Linearna regresija je jako osjetljiva na stršeče vrijednosti pa ćemo variajblu Price provući kroz logaritamsku funkciju kako bi se umanjio njihov utjecaj. Pomoću histograma možemo vidjeti da provlaćenjem cijene kroz logaritamsku funkciju distribucija više nalikuje normalnoj stoga ćemo u kasnijim modelima zasigurno koristiti log(Cijena).
+Linearna regresija je jako osjetljiva na stršeće vrijednosti pa ćemo varijablu Price provući kroz logaritamsku funkciju kako bi se umanjio njihov utjecaj. S pomoću histograma možemo vidjeti da provlačenjem cijene kroz logaritamsku funkciju distribucija više nalikuje normalnoj stoga ćemo u kasnijim modelima zasigurno koristiti log(Cijena).
 
 ```{r}
 hist(dataset_vina$Price)
@@ -648,7 +648,7 @@ dataset_vina$Log_Price <- log(dataset_vina$Price)
 hist(dataset_vina$Log_Price)
 ```
 
-Sada se bolje vidi kako numeričke varijable (Age, Reviews i Ratings) utjeću na cijenu vina. Uz to su dodani još grafovi s varijablama Age i Reviews provućenim kroz log.
+Sada se bolje vidi kako numeričke varijable (Age, Reviews i Ratings) utječu na cijenu vina. Uz to su dodani još grafovi s varijablama Age i Reviews provučenim kroz log.
 
 ```{r}
 
@@ -683,7 +683,7 @@ plot(dataset_vina$Log_Reviews,dataset_vina$Log_Price)
 lines(dataset_vina$Log_Reviews,fit.reviews$fitted.values,col='red')
 ```
 
-Korelacijska matrica prikazuje povezanost između nezavisnih varijabli, što nam je bitno jer linearna regresiija loše funkcionira kada su nezavisne varijable jako korelirane, stoga je u tom slućaju dobra praksa izbaciti one koje su višak.
+Korelacijska matrica prikazuje povezanost između nezavisnih varijabli, što nam je bitno jer linearna regresija loše funkcionira kada su nezavisne varijable jako korelirane, stoga je u tom slučaju dobra praksa izbaciti one koje su višak.
 
 Iako se ovdje vidi neka korelacija između starosti vina i ocjene smatramo da nije dovoljna za izbacivanje ijedne od te dvije varijable.
 
@@ -697,7 +697,7 @@ cor(cbind(dataset_vina$Age,dataset_vina$Rating,dataset_vina$Reviews))
 
 ```
 
-Katgorijske varijable se predstavljaju dummy varijablama jer linearna regresija radi samo s numeričkim podacima. Svaka kategorija predstavljena je svojom vlastitom indikatorskom varijablom koja poprima vrijednost 1 u slučaju da originalna kategorijska varijabla poprima vrijednost te kategorije, a 0 inače.
+Kategorijske varijable se predstavljaju dummy varijablama jer linearna regresija radi samo s numeričkim podacima. Svaka kategorija predstavljena je svojom vlastitom indikatorskom varijablom koja poprima vrijednost 1 u slučaju da originalna kategorijska varijabla poprima vrijednost te kategorije, a 0 inače.
 
 ```{r}
 
@@ -707,7 +707,7 @@ dataset_vina.d = dummy_cols(dataset_vina,select_columns=c('Primary_Grape',
 
 ```
 
-U prvom modelu korištene su varijable: Age, Rating, Reviews, Natural, Style, Country_Code, Primary_Grape. Vidi se da model dosta loše procjenjuje po samoj prosječnoj grešci koja iznosi 105.3 eura te R-squared metrikom 0.2287. Također je vidljivo da su neke od kategorijskih varijabla visoko korelirane pa ćemo te varijable izbaciti iz modela, kao i one varijable koje nisu znaćajne za model tj. imaju visoku p vrijednost. Bitno je i da ovakav model za neke cijene predviđa negativne vrijednosti što nije prihvatljivo u ovom slućaju.
+U prvom modelu korištene su varijable: Age, Rating, Reviews, Natural, Style, Country_Code, Primary_Grape. Vidi se da model dosta loše procjenjuje po samoj prosječnoj grešci koja iznosi 105.3 eura te R-squared metrikom 0.2287. Također je vidljivo da su neke od kategorijskih varijabla visoko korelirane pa ćemo te varijable izbaciti iz modela, kao i one varijable koje nisu značajne za model tj. imaju visoku p vrijednost. Bitno je i da ovakav model za neke cijene predviđa negativne vrijednosti što nije prihvatljivo u ovom slučaju.
 
 ```{r}
 model <- lm(Price ~ Age + Rating + Reviews + Natural + Style + Country_Code + 
@@ -717,7 +717,7 @@ summary(model)
 
 ```
 
-Sljedeći model očekivano nije ništa bolji jer smo samo makli nepotrebne varijable i ništa nismo promjenili osim toga, ali on će biti referentni model s kojim ćemo uspoređivati ostale.
+Sljedeći model očekivano nije ništa bolji jer smo samo makli nepotrebne varijable i ništa nismo promijenili osim toga, ali on će biti referentni model s kojim ćemo uspoređivati ostale.
 
 ```{r}
 
@@ -764,7 +764,7 @@ hist(rstandard(model_log))
 
 ```
 
-Kako bih lakše pridočili razliku u modelima ovdje računamo razliku prosječne pogreške između modela s CIjenom i log(cijenom)
+Kako bih lakše predočili razliku u modelima ovdje računamo razliku prosječne pogreške između modela s CIjenom i log(cijenom)
 
 ```{r}
 
@@ -784,8 +784,8 @@ cat("MAE (Log Scale):", mae_log, "\n")
 
 ```
 
-Kako bi poboljšali model ponekad je dobro izbaciti stršeće vrijednosti, jer one znatno utjeću na model a često nisu reprezentativna za većinu uzoraka.
-Iako smo ovdje to prikazali ponekad izbacivanje stršečih vrijednosti izbacuje bitne podatke o anomalijama u modelu što možda poboljšava model na podacima na kojima je treniran, ali gubi mogućnost generalizacije na neviđenim podacima. To je očenito preporučeno kada se smatra da su stršeče vrijednosti rezultat pogreške u pdoacima što ovdje nije nužno slučaj.
+Kako bi poboljšali model ponekad je dobro izbaciti stršeće vrijednosti, jer one znatno utječu na model a često nisu reprezentativna za većinu uzoraka.
+Iako smo ovdje to prikazali ponekad izbacivanje stršećih vrijednosti izbacuje bitne podatke o anomalijama u modelu što možda poboljšava model na podacima na kojima je treniran, ali gubi mogućnost generalizacije na neviđenim podacima. To je općenito preporučeno kada se smatra da su stršeće vrijednosti rezultat pogreške u podacima što ovdje nije nužno slučaj.
 
 ```{r}
 
@@ -804,7 +804,7 @@ summary(model_log)
 
 ```
 
-Vidi se da se greška modela bez outliera dodatno smanjila, ali na punom skupu podataka s stršečim vrijednostima performa nešto gore.
+Vidi se da se greška modela bez outliera dodatno smanjila, ali na punom skupu podataka sa stršećim vrijednostima performa nešto gore.
 
 ```{r}
 
@@ -840,7 +840,7 @@ Pa, može li se na temelju dostupnih podataka predvidjeti cijena vina? Naš odgo
 Posljednje pitanje na koje nas zanima odgovor jest: 
 "Koja vinska regija nudi najbolji omjer ocjene i cijene vina? Koju vinariju bismo posjetili iz te regije?"
 
-Započinjemo sa pregledom relevantnih podataka, u nastavku možemo vidjeti broj regija koje svaka država sadrži.
+Započinjemo s pregledom relevantnih podataka, u nastavku možemo vidjeti broj regija koje svaka država sadrži.
 
 ``` {r vinske regije grupirane prema državama}
 library(dplyr)
@@ -852,7 +852,7 @@ region_counts <- dataset_vina %>%
 print(region_counts)
 ```
 
-Za početak, omjer ocijene i cijene izračunat ćemo tako da podatke grupiramo po regijama te za svaku regiju odredimo prosječnu ocijenu (Avg_Rating), prosječnu cijenu vina u toj regiji (Avg_Price) te na temelju njih izračunamo njihov omjer (Avg_Rating_Price_Ratio). Regije u nastavku sortirane su silazno na temelju njihovog omjera.
+Za početak, omjer ocijene i cijene izračunat ćemo tako da podatke grupiramo po regijama te za svaku regiju odredimo prosječnu ocjenu (Avg_Rating), prosječnu cijenu vina u toj regiji (Avg_Price) te na temelju njih izračunamo njihov omjer (Avg_Rating_Price_Ratio). Regije u nastavku sortirane su silazno na temelju njihovog omjera.
 
 Prvih 10 regija koje imaju najveći omjer ocjene i cijene:
 
@@ -870,7 +870,7 @@ result <- dataset_vina %>%
 head(result, 10)
 ```
 
-Prikaz prosječnih ocijena i cijena vinarija u regiji sa najboljim omjerom ocijene i kvalitete:
+Prikaz prosječnih ocjena i cijena vinarija u regiji sa najboljim omjerom ocijene i kvalitete:
 
 ```{r grafički prikaz vinarija}
 library(dplyr)
@@ -911,11 +911,11 @@ ggplot(long_data, aes(x = Winery, y = Value, color = Metric, group = Metric)) +
 
 ```
 
-Možemo vidjeti da kad smo izračunali samo omjer ocijene i cijene, dobili samo da najbolji omjer ima regija koja sadrži samo dvije različite vrste vina, pri čemu imamo prikaz jedne drste vina kroz dvije godine. Ocijene su također relativno niske, ali cijena vina bliska je ocijenama, stoga je omjer ocjene i cijene najveći, no to ne mora značiti da je uistinu i najbolji. Budući da regija sadrži mali broj zapisa, nema velikih fluktuacija u ocjenama što također doprinosi visokoj vrijednosti omjera.
+Možemo vidjeti da kad smo izračunali samo omjer ocijene i cijene, dobili samo da najbolji omjer ima regija koja sadrži samo dvije različite vrste vina, pri čemu imamo prikaz jedne vrste vina tijekom dvije godine. Ocijene su također relativno niske, ali cijena vina bliska je ocjenama, stoga je omjer ocjene i cijene najveći, no to ne mora značiti da je uistinu i najbolji. Budući da regija sadrži mali broj zapisa, nema velikih fluktuacija u ocjenama što također doprinosi visokoj vrijednosti omjera.
 
 
 
-Kako bi prosječne vrijednosti adekvatnije prikazivale stanje u regiji, promotrimo sada prvih 10 regija koje imaju najveći omjer ocijene i cijene, a da imaju više od 10 ocijena vina unutar regije:
+Kako bi prosječne vrijednosti adekvatnije prikazivale stanje u regiji, promotrimo sada prvih 10 regija koje imaju najveći omjer ocijene i cijene, a da imaju više od 10 ocjena vina unutar regije:
 
 ```{r vinske regije sortirane silazno po omjeru ocjene i cijene - imaju više od 10 ocjena}
 min_vines <- 10
@@ -985,13 +985,13 @@ ggplot(long_data, aes(x = Winery, y = Value, color = Metric, group = Metric)) +
 
 ```
 
-Kada promotrimo regije koje imaju više od 10 zapisa o vinima, prvo mjesto zauzima Španjolska regija Cariñena. Kada bismo birali vinariju u ovoj regiji odabrali bismo vinariju El Ciroo jer ima prosječnu ocijenu blisku prosječnoj ocijeni regije, dok je prosječna cijena niža naspram drugih vinarija. 
+Kada promotrimo regije koje imaju više od 10 zapisa o vinima, prvo mjesto zauzima Španjolska regija Cariñena. Kada bismo birali vinariju u ovoj regiji odabrali bismo vinariju El Ciroo jer ima prosječnu ocjenu blisku prosječnoj ocijeni regije, dok je prosječna cijena niža naspram drugih vinarija. 
 
-Ipak, možemo uvidjeti da mali brojnik (ocijene su iz intervala od 0-5) znatno utječe na omjer, jer su bolja vina često i skuplja, skuplja vina znatno smanjuju omjer ocijene i cijene jer ocijena i cijena ne rastu proporcionalno. Stoga ćemo proučiti promjenu omjera ovisno o rastu prosječne ocijene regije. U filtraciji zatražit ćemo da ocijena regije iterativno raste sa 3.5 na 4.5 kako bismo pronašli kvalitetnije vino po pristojnoj cijeni. 
+Ipak, možemo uvidjeti da mali brojnik (ocijene su iz intervala od 0-5) znatno utječe na omjer, jer su bolja vina često i skuplja, skuplja vina znatno smanjuju omjer ocijene i cijene jer ocjena i cijena ne rastu proporcionalno. Stoga ćemo proučiti promjenu omjera ovisno o rastu prosječne ocijene regije. U filtraciji zatražit ćemo da ocjena regije iterativno raste s 3.5 na 4.5 kako bismo pronašli kvalitetnije vino po pristojnoj cijeni. 
 
 Radimo iteracije u kojima mijenjamo vrijednost filtera filter(Avg_Rating > x), pri čemu x poprima vrijednosti od 3.5 do 4.5 uz korak 0.1:
 
-```{r vinske regije sortirane silazno po omjeru ocjene i cijene - imaju prosječnu ocijenu regije 3.5-4.5}
+```{r vinske regije sortirane silazno po omjeru ocjene i cijene - imaju prosječnu ocjenu regije 3.5-4.5}
 library(dplyr)
 
 x <- 3.5
@@ -1031,7 +1031,7 @@ print(best_combined)
 
 Grafički prikaz vinarija koje imaju prosječnu ocjenu regije između 3.5-4.5:
 
-```{r grafički prikaz regija koje imaju prosječnu ocijenu regije 3.5-4.5}
+```{r grafički prikaz regija koje imaju prosječnu ocjenu regije 3.5-4.5}
 library(dplyr)
 library(ggplot2)
 library(tidyr)
@@ -1092,7 +1092,7 @@ while (x_br < max_x) {
 
 ```
 
-U sljedećem prikazu podataka, uviđamo kako je najbolji omjer ocijene i cijene ponudila regija Primitivo di Manduria, sa prosječnom ocijenom 4.090909, te prosječnom cijenom	13.376364. Iako je sam omjer relativno mali (0.305831181), to je za očekivati budući da je nazivnik (prosječna ocijena) vrlo mali broj, a porast prosječne ocijene ne prati linearno porast cijene. 
+U sljedećem prikazu podataka, uviđamo kako je najbolji omjer ocijene i cijene ponudila regija Primitivo di Manduria, s prosječnom ocjenom 4.090909, te prosječnom cijenom	13.376364. Iako je sam omjer relativno mali (0.305831181), to je za očekivati budući da je nazivnik (prosječna ocjena) vrlo mali broj, a porast prosječne ocijene ne prati linearno porast cijene. 
 
 ```{r vinarija sa najboljim omjerom cijene i kvalitete}
 Primitivo_di_Manduria_data <- dataset_vina %>%
@@ -1102,10 +1102,9 @@ print(Primitivo_di_Manduria_data)
 
 ```
 
-Kada bismo morali birati vinariju iz ove regije odabrali bismo San Marzano jer njihovo vino "60 Sessantanni Old Vines Primitivo di Manduria 2017" ima 7442 osvrta te visoku ocjenu od 4.5. Stoga možemo zaključiti ukoliko vinarija ima toliki publicitet i visoke ocijene, da su im i proizvodi kvalitetni i vrijedni degustacije.
+Kada bismo morali birati vinariju iz ove regije odabrali bismo San Marzano jer njihovo vino "60 Sessantanni Old Vines Primitivo di Manduria 2017" ima 7442 osvrta te visoku ocjenu od 4.5. Stoga možemo zaključiti ako vinarija ima toliki publicitet i visoke ocijene, da su im i proizvodi kvalitetni i vrijedni degustacije.
 
-Za osobe koje su spremne izdvojiti više, regije Duriense i Wehlen također mogu pružiti dobar omjer prosječne ocijene i cijene, dok svim regijama sa prosječnom ocijenom većom od 4.3, cijena izrazito naraste.
-
+Za osobe koje su spremne izdvojiti više, regije Duriense i Wehlen također mogu pružiti dobar omjer prosječne ocijene i cijene, dok svim regijama s prosječnom ocjenom većom od 4.3, cijena izrazito naraste.
 
 
 
